--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,29 +6,54 @@
 
 body {
     height: 100vh;
-    background-color: blue;
+    display: flex;
+    position: relative;
+    background-color: white;
+}
+
+
+
+body::after {
+    content: "";
+    background: url('../images/bg-card-2.jpg');
+    background-size: cover;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    opacity: 0.7;
+    z-index: -1;  
 }
 
 .mem-game {
-    border: 2px solid red;
-    width: 900px;
-    height: 900px;
+    width: 1100px;
+    height: 800px;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
 }
 
+
 .game-card {
-    width: 150px;
-    height: 150px;
-    border: 2px solid lime;
+    width: calc(16.666% - 10px);
+    height: calc(16.666% - 10px);
+    margin: 5px;
+    position: relative;
+    transform: scale(1);
+}
+
+.game-card:active {
+    transform: scale(.95);
+    transition: transform .1s;
 }
 
 .card-front,
 .card-back {
-    border: 2px solid pink;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background: blue;
+    position: absolute;
 }
 
-img {
-    width: 100px;
-    height: 100px;
-}
