--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body::after {
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+    perspective: 1000px;
 }
 
 
@@ -41,11 +42,17 @@ body::after {
     margin: 5px;
     position: relative;
     transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
 }
 
 .game-card:active {
     transform: scale(.95);
     transition: transform .1s;
+}
+
+.game-card.turn {
+    transform: rotateY(180deg);
 }
 
 .card-front,
