--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,12 +27,12 @@ body::after {
 }
 
 .mem-game {
-    width: 1100px;
+    width: 1200px;
     height: 800px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    perspective: 1000px;
+    perspective: 2000px;
 }
 
 
@@ -60,7 +60,13 @@ body::after {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    backface-visibility: hidden;
     background: blue;
     position: absolute;
+    box-shadow: 5px 5px 11px 2px rgb(66, 66, 66);
+}
+
+.card-back {
+    transform: rotateY(180deg);
 }
 
